Add comments on when page starts

--- a/book/templates/book/add_chapter.html
+++ b/book/templates/book/add_chapter.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block content %} {% load crispy_forms_tags %}
 
+<!-- Adding a chapter content starts here -->
+
 <div class="container">
   <header class="d-flex justify-content-center">
     <h3>Add a chapter to your book</h3>
@@ -21,6 +23,8 @@
     </form>
   </div>
 </div>
+
+<!-- Adding a chapter content ends here -->
 
   {% endblock content %}
 
