--- a/book/templates/book/delete_book.html
+++ b/book/templates/book/delete_book.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
+<!-- Delete book page starts here -->
 
   <div class="container">
 
@@ -31,7 +32,7 @@
     </div>
   </div>
 
-    
+    <!-- Delete book page ends here -->
   
   
 
