--- a/book/templates/book/delete_chapter.html
+++ b/book/templates/book/delete_chapter.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
+<!-- Delete chapter page starts here -->
+
 <div class="container">
 
   <div class="container">
@@ -24,7 +26,7 @@
     </div>
 </div>
 
-
+<!-- Delete chapter page ends here -->
 
 
 {% endblock content %}
