--- a/profiles/templates/profiles/bookmarked.html
+++ b/profiles/templates/profiles/bookmarked.html
@@ -2,7 +2,7 @@
 
 <!-- Bookmark page content starts here -->
 <div class="container-fluid">
-    <section class="d-flex justify-content-center align-items-center h-100 min-vh-100">
+    <section class="d-flex justify-content-center align-items-center h-100">
         <div class="row gy-2">
           {% for bookmark in bookmarked_books %}
           <div class="col-lg-4 col-md-4">
