--- a/profiles/templates/profiles/draft.html
+++ b/profiles/templates/profiles/draft.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% load static %} {% block content %}
-
+<!-- Draft book content starts here -->
 <div class="container">
     <section class="text-center">
         <div class="col d-flex justify-content-center">
@@ -31,5 +31,7 @@
     </section>
    
 </div>
+
+<!-- Draft boook content ends here -->
 
 {% endblock content %}
