--- a/book/templates/book/edit_book.html
+++ b/book/templates/book/edit_book.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block content %} {% load crispy_forms_tags %}
 
+<!-- Edit book form starts here -->
+
 <div class="container">
   <header class="d-flex justify-content-center">
     <h1>Edit {{ books.title }} Book </h1>
@@ -21,4 +23,7 @@
   
   </div>
 </div>
+
+<!-- Edit book form ends here -->
+
   {% endblock content %}
