--- a/book/templates/book/edit_chapter.html
+++ b/book/templates/book/edit_chapter.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block content %} {% load crispy_forms_tags %}
 
+<!-- Edit chapter form starts here -->
+
   <div class="container">
     <header class="d-flex justify-content-center">
       <h1>Edit chapter </h1>
@@ -21,5 +23,8 @@
     
     </div>
   </div>
+
+  <!-- Edit chapter form starts here -->
+
 {% endblock content %}
 
