--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
+<!-- Profile content starts here -->
+
 <div class="container">
 
     <div class="row text-center">
@@ -9,7 +11,7 @@
         <a href="{% url 'book_details' %}" class="btn btn-secondary btn-lg">Create new book</a>
         <a href="{% url 'bookmarked' %}" class="btn btn-secondary btn-lg">View Bookmarks</a>
     </div>
-
+    <!-- Published books -->
     <section>
         <div class="published">
             <div class="row">
@@ -65,7 +67,7 @@
     </section>
 
 
-
+    <!-- Draft books -->
 
     <section>
         <h4>Books in draft:</h4>
@@ -115,5 +117,6 @@
     
 </div>
 
+<!-- Profile content ends here -->
 
 {% endblock content %}
