Add comment for when content starts

--- a/browse/templates/browse/book_view.html
+++ b/browse/templates/browse/book_view.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
+<!-- Book view content starts here -->
 <div class="container-fluid">
     <div class="d-flex row justify-content-center">
         <div class="col-sm-6">
@@ -45,6 +46,6 @@
    
 </div>
 
-
+<!-- Book view content ends here -->
 
 {% endblock %}
