--- a/browse/templates/browse/read_book.html
+++ b/browse/templates/browse/read_book.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
-
+<!-- Reading book content starts here -->
 
 <div class="container-md">
     <div class="d-flex book-container justify-content-md-center">
@@ -25,5 +25,7 @@
 </div>
 
 <script src="{% static 'js/script.js' %}"></script>
+
+<!-- Reading book content ends here -->
 
 {% endblock content %}
