--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,32 +7,35 @@
 
 {% block content %}
 
-
-<div class="container square-box d-flex justify-content-center align-items-center">
-  <div class="row">
-    <div class="card">
-      <div class="col-md-8 offset-md-2 text-center">
-        <h3 class="text-center">{% trans "Sign In" %}</h3>
-        <p>{% blocktrans %}
-          Welcome back to Inkpad. To create a book or read a book, you must log in. If
-          you have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
-          first.{% endblocktrans %}
-        </p>
-      </div>
-      <div class="col-md-8 offset-md-2 text-center">
-        <form class="login" method="POST" action="{% url 'account_login' %}">
-          {% csrf_token %}
-          {{ form | crispy }}
-          {% if redirect_field_value %}
-          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
-          {% endif %}
-          <button class="btn btn-signup btn-secondary" type="submit">{% trans "Sign In" %}</button>
-        </form>
+<div class="container-fluid">
+  <div class="row d-flex justify-content-center">
+    <div class="col-lg-8 col-md-8 col-sm-8">
+      <div class="box h-100 d-flex p4 flex-column">
+        <div class="card h-100">
+          <div class="text-center">
+            <h3 class="text-center">{% trans "Sign In" %}</h3>
+            <p>{% blocktrans %}
+              Welcome back to Inkpad. To create a book or read a book, you must log in. If
+              you have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
+              first.{% endblocktrans %}
+            </p>
+          </div>
+          <div class="col-md-8 offset-md-2 text-center ">
+            <form class="login" method="POST" action="{% url 'account_login' %}">
+              {% csrf_token %}
+              {{ form | crispy }}
+              {% if redirect_field_value %}
+              <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" style="width: 95%;" >
+              {% endif %}
+              <button class="btn btn-signup btn-secondary" type="submit">{% trans "Sign In" %}</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
-
   </div>
 </div>
+
 
 
 
