Refactor call book-content to card

--- a/browse/templates/browse/read_book.html
+++ b/browse/templates/browse/read_book.html
@@ -3,7 +3,7 @@
 <!-- Reading book content starts here -->
 
 <div class="container-md">
-    <div class="d-flex book-container justify-content-md-center">
+    <div class="d-flex card justify-content-md-center">
         <div class="d-flex row justify-content-center">
             <div class="col-sm col-md-8 col-lg-8">
                 <div id="bookContent">
