--- a/browse/templates/browse/browse.html
+++ b/browse/templates/browse/browse.html
@@ -17,18 +17,20 @@
               <h5>{{ book.title | safe }}</h5>
               <p>{{ book.excerpt | safe }}</p>
               {% if user.is_authenticated %}
-              <div class="d-flex justify-content-around align-items-center">
-                  <a href="{% url 'book_view' book.slug %}" class="btn btn-secondary mt-auto">View book</a>
-                  <a href="{% url 'read_book' slug=book.slug %}" class="btn btn-secondary mt-auto">Read now</a>
-                  <form action="{% url 'bookmark_book' slug=book.slug %}" method="POST" class="mt-auto">
-                      {% csrf_token %}
-                      {% if book.id in bookmarked_book_ids %}
-                          <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark"><i class="fa-solid fa-bookmark fa-lg"></i></button>
-                      {% else %}
-                          <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark"><i class="fa-regular fa-bookmark fa-lg"></i></button>
-                      {% endif %}
-                  </form>
-              </div>
+                <div class="d-flex justify-content-around align-items-center">
+                    <a href="{% url 'book_view' book.slug %}" class="btn btn-secondary mt-auto">View book</a>
+                    <a href="{% url 'read_book' slug=book.slug %}" class="btn btn-secondary mt-auto">Read now</a>
+                    <form action="{% url 'bookmark_book' slug=book.slug %}" method="POST" class="mt-auto">
+                        {% csrf_token %}
+                        {% if book.id in bookmarked_book_ids %}
+                            <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark"><i class="fa-solid fa-bookmark fa-lg"></i></button>
+                        {% else %}
+                            <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark"><i class="fa-regular fa-bookmark fa-lg"></i></button>
+                        {% endif %}
+                    </form>
+                </div>
+              {% else %}
+              <a href="{% url 'account_signup' %}" class="btn btn-light">Log in to view</a>
               {% endif %}
               
             </div>
