Fix pagination numbers to show of page

--- a/browse/templates/browse/browse.html
+++ b/browse/templates/browse/browse.html
@@ -61,8 +61,7 @@
       </li>
       <li class="current">
       <li class="page-item"></li>
-      <li class="page-item"><a class="page-link" href="#">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages
-          }}.</a></li>
+      <li class="page-item"><a class="page-link" href="#">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</a></li>
       </li>
       <li class="page-item">
         {% if page_obj.has_next %}
