Add published link to dropdown navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                 {{ user }}
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'profile' %}">View Profile</a></li>
+                <li><a class="dropdown-item" href="{% url 'published-books' %}">Published books</a></li>
                 <li><a class="dropdown-item" href="{% url 'book_details' %}">Create a book</a></li>
                 <li><a class="dropdown-item" href="{% url 'bookmarked' %}">Bookmarks</a></li>
               </ul>
