Add draft vieew page to dropdown

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="{% url 'published-books' %}">Published books</a></li>
+                <li><a class="dropdown-item" href="{% url 'draft-books' %}">Draft books</a></li>
                 <li><a class="dropdown-item" href="{% url 'book_details' %}">Create a book</a></li>
                 <li><a class="dropdown-item" href="{% url 'bookmarked' %}">Bookmarks</a></li>
               </ul>
