Refactore closing comment

--- a/profiles/templates/profiles/published-books.html
+++ b/profiles/templates/profiles/published-books.html
@@ -29,5 +29,5 @@
     {% endfor %}
   </div>
 
-<!-- Browse book content ends here -->
+<!-- Published books content ends here -->
 {% endblock content %}
