--- a/browse/templates/browse/browse.html
+++ b/browse/templates/browse/browse.html
@@ -5,7 +5,7 @@
   <header>
     <h1 class="text-center">Browse our book selections</h1>
   </header>
-
+  <!-- book card -->
   <section class="d-flex justify-content-center align-items-center h-100 ">
     <div class="row gy-2">
       {% for book in book_list %}
@@ -16,30 +16,32 @@
             <div class="card-body">
               <h5>{{ book.title | safe }}</h5>
               <p>{{ book.excerpt | safe }}</p>
+              <!-- Book buttons -->
               {% if user.is_authenticated %}
-                <div class="d-flex justify-content-around align-items-center">
-                    <a href="{% url 'book_view' book.slug %}" class="btn btn-secondary mt-auto">View book</a>
-                    <a href="{% url 'read_book' slug=book.slug %}" class="btn btn-secondary mt-auto">Read now</a>
-                    <form action="{% url 'bookmark_book' slug=book.slug %}" method="POST" class="mt-auto">
-                        {% csrf_token %}
-                        {% if book.id in bookmarked_book_ids %}
-                            <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark"><i class="fa-solid fa-bookmark fa-lg"></i></button>
-                        {% else %}
-                            <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark"><i class="fa-regular fa-bookmark fa-lg"></i></button>
-                        {% endif %}
-                    </form>
-                </div>
+              <div class="d-flex justify-content-around align-items-center">
+                <a href="{% url 'book_view' book.slug %}" class="btn btn-secondary mt-auto">View book</a>
+                <a href="{% url 'read_book' slug=book.slug %}" class="btn btn-secondary mt-auto">Read now</a>
+                <form action="{% url 'bookmark_book' slug=book.slug %}" method="POST" class="mt-auto">
+                  {% csrf_token %}
+                  {% if book.id in bookmarked_book_ids %}
+                  <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark"><i
+                      class="fa-solid fa-bookmark fa-lg"></i></button>
+                  {% else %}
+                  <button type="submit" name="book_id" value="{{ book.id }}" class="bookmark"><i
+                      class="fa-regular fa-bookmark fa-lg"></i></button>
+                  {% endif %}
+                </form>
+              </div>
+              <!-- If not logged in -->
               {% else %}
               <a href="{% url 'account_signup' %}" class="btn btn-light">Log in to view</a>
               {% endif %}
-              
             </div>
           </div>
         </div>
       </div>
       {% if forloop.counter|divisibleby:3 and not forloop.last %}
     </div>
-
   </section>
   <div class="row">
     {% endif %}
@@ -61,7 +63,8 @@
       </li>
       <li class="current">
       <li class="page-item"></li>
-      <li class="page-item"><a class="page-link" href="#">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</a></li>
+      <li class="page-item"><a class="page-link" href="#">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages
+          }}.</a></li>
       </li>
       <li class="page-item">
         {% if page_obj.has_next %}
