Add more comments on html page

--- a/book/templates/book/add_chapter.html
+++ b/book/templates/book/add_chapter.html
@@ -7,7 +7,7 @@
     <h3>Add a chapter to your book</h3>
   </header>
 
-  
+  <!-- Add chapter form -->
   <div class="d-flex justify-content-center">
     <form method="post" enctype="multipart/form-data" class="form-group">
         <div class="form-group">
