--- a/book/templates/book/book_details.html
+++ b/book/templates/book/book_details.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %} {% load static %} {% block content %} {% load crispy_forms_tags %}
 
+<!-- Create book details start here -->
 <div class="container">
     <header>
         <h1 class="text-center">Create Your Book</h1>
@@ -23,5 +24,5 @@
     
     
 </div>
-
+<!-- Create book details ends here -->
 {% endblock content %}
