--- a/book/templates/book/edit_book.html
+++ b/book/templates/book/edit_book.html
@@ -4,9 +4,10 @@
 
 <div class="container">
   <header class="d-flex justify-content-center">
-    <h1>Edit {{ books.title }} Book </h1>
+    <h1>Edit Book </h1>
   </header>
 
+  <!-- Edit book form -->
   <div class="d-flex justify-content-center">
     <form method="post" enctype="multipart/form-data" id="bookCreationForm" class="form-group">
         <div class="form-group">
