--- a/book/templates/book/completed_book.html
+++ b/book/templates/book/completed_book.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
 <!-- Completed book view content starts here -->
-
+<!-- Message alerts -->
 {% if messages %}
     {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
@@ -11,6 +11,7 @@
 {% endif %}
 
 <br>
+<!-- completed book -->
 <div class="container d-flex justify-content-center">
     <div class="card" style="width: 30rem;">
         <img src="{{ books.image.url }}" class="card-img-top" alt="{{ books.title }}">
@@ -18,6 +19,7 @@
           <h3 class="card-title">{{ books.title | safe }}</h3>
             <p class="card-text">{{ books.excerpt | safe }}</p>
             <p class="card-text">{{ books.synopsis | safe }}</p>
+            <!-- buttons to amend book -->
             <a href="{% url 'add_chapter' book_slug=books.slug %}" class="btn btn-secondary">Add a chapter</a>
             <a href="{% url 'edit_book' slug=books.slug pk=books.pk %}" class="btn btn-secondary">Edit book details</a>
             <a href="{% url 'delete_book' slug=books.slug %}" class="btn btn-secondary">Delete book</a>
