--- a/book/templates/book/edit_chapter.html
+++ b/book/templates/book/edit_chapter.html
@@ -6,7 +6,7 @@
     <header class="d-flex justify-content-center">
       <h1>Edit chapter </h1>
     </header>
-
+      <!-- Edit chapter form -->
     <div class="d-flex justify-content-center">
       <form method="post" enctype="multipart/form-data" id="bookCreationForm" class="form-group">
           <div class="form-group">
