Add more comments on html page

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -13,6 +13,7 @@
     {% endfor %}
   {% endif %}
   <br>
+  <!-- Image & text content -->
   <section class="homepage-container">
     <div class="banner-card">
       <img src="static/images/book_side.jpg" alt="Partial view of book covers">
