--- a/profiles/templates/profiles/draft-books.html
+++ b/profiles/templates/profiles/draft-books.html
@@ -6,7 +6,7 @@
       <h1 class="text-center">Draft books</h1>
       <h4>Below you will find a list of any books you have in draft</h4>
     </header>
-  
+    <!-- Book list -->
     <section class="d-flex justify-content-center align-items-center h-100 ">
       <div class="row gy-2">
         {% for draft in book_drafts %}
