--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 
 <body>
   <div class="body-wrapper">
+    <!-- Navigation bar start -->
     <nav class="navbar navbar-expand-lg" style="background-color: #f1e7c1ea;">
       <div class="container-fluid">
         <a class="navbar-brand" href="{{ home_url }}">Inkpad</a>
@@ -67,7 +68,7 @@
         </div>
       </div>
     </nav>
-    
+    <!-- Navigation bar end -->
 
       
 
@@ -80,7 +81,7 @@
       </main>
 
 
-      <!-- Footer -->
+      <!-- Footer start -->
       <footer class="text-center" style="background-color: #f1e7c1ea;">
         <!-- Grid container -->
         <div class="container pt-4">
@@ -117,9 +118,9 @@
         </div>
         <!-- Copyright -->
       </footer>
+      <!-- Footer end -->
 
       <!-- Javascript Bootstrap -->
-
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
