Add comments to html page

--- a/profiles/templates/profiles/draft.html
+++ b/profiles/templates/profiles/draft.html
@@ -14,7 +14,8 @@
                   <a href="{% url 'delete_book' slug=draft_book.slug %}" class="btn btn-secondary card-link" >Delete book</a>
                 {% endif %}  
                 </div>
-
+                
+                <!-- Draft chapters begin here -->
                 <hr>
                 {% if draft_chapters %}
                     <h6><strong>Chapters:</strong></h6>
