--- a/browse/templates/browse/browse.html
+++ b/browse/templates/browse/browse.html
@@ -6,7 +6,6 @@
     <h1 class="text-center">Browse our book selections</h1>
   </header>
   <!-- book card -->
-  <section class="d-flex justify-content-center align-items-center h-100 ">
     <div class="row gy-2">
       {% for book in book_list %}
       <div class="col-lg-4 col-md-4">
@@ -41,9 +40,7 @@
         </div>
       </div>
       {% if forloop.counter|divisibleby:3 and not forloop.last %}
-    </div>
-  </section>
-  <div class="row">
+    </div><div class="row">
     {% endif %}
     {% endfor %}
   </div>
@@ -54,25 +51,27 @@
 
   <!-- Page navigation -->
   <br>
-  <nav aria-label="Page navigation">
-    <ul class="d-flex pagination justify-content-center">
-      <li class="page-item">
-        {% if page_obj.has_previous %}
-        <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Prev">&laquo;</a>
-        {% endif %}
-      </li>
-      <li class="current">
-      <li class="page-item"></li>
-      <li class="page-item"><a class="page-link" href="#">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages
-          }}.</a></li>
-      </li>
-      <li class="page-item">
-        {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}" class="page-link" aria-label="Next">&raquo;</a>
-        {% endif %}
-      </li>
-    </ul>
-  </nav>
+  <div class="row">
+    <nav aria-label="Page navigation">
+      <ul class="d-flex pagination justify-content-center">
+        <li class="page-item">
+          {% if page_obj.has_previous %}
+          <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Prev">&laquo;</a>
+          {% endif %}
+        </li>
+        <li class="current">
+        <li class="page-item"></li>
+        <li class="page-item"><a class="page-link" href="#">Page {{ page_obj.number }}</a></li>
+        </li>
+        <li class="page-item">
+          {% if page_obj.has_next %}
+          <a href="?page={{ page_obj.next_page_number }}" class="page-link" aria-label="Next">&raquo;</a>
+          {% endif %}
+        </li>
+      </ul>
+    </nav>
+  </div>
+
 </div>
 
 <!-- Browse book content ends here -->
