Refactor pages to ammend closing tags & comments

--- a/book/templates/book/edit_chapter.html
+++ b/book/templates/book/edit_chapter.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <!-- Edit chapter form starts here -->
+  <!-- Edit chapter form ends here -->
 
 {% endblock content %}
 
