--- a/profiles/templates/profiles/bookmarked.html
+++ b/profiles/templates/profiles/bookmarked.html
@@ -42,7 +42,7 @@
       {% endfor %}
     </div>
 </div>
-<!-- Bookmark page content starts here -->
+<!-- Bookmark page content ends here -->
 
 
 {% endblock content %}
