--- a/profiles/templates/profiles/draft-books.html
+++ b/profiles/templates/profiles/draft-books.html
@@ -29,7 +29,7 @@
       {% endif %}
       {% endfor %}
     </div>
-  
+</div>
 <!-- Draft book list content ends here -->
 
 {% endblock content %}
