--- a/profiles/templates/profiles/published-books.html
+++ b/profiles/templates/profiles/published-books.html
@@ -29,6 +29,6 @@
     {% endif %}
     {% endfor %}
   </div>
-
-<!-- Published books content ends here -->
-{% endblock content %}
+</div>
+  <!-- Published books content ends here -->
+  {% endblock content %}
