--- a/book/templates/book/delete_chapter.html
+++ b/book/templates/book/delete_chapter.html
@@ -6,27 +6,27 @@
 
   <div class="container">
     <div class="row">
-        <div class="col d-flex justify-content-center align-items-center" style="min-height: 65vh;">
-          <div class="card text-center">
-            <h5 class="card-header">Are you sure you want to delete this chapter?</h5>
-            <div class="card-body">
-              <form method="post">
-                {% csrf_token %}
-                <h5 class="card-title">It will be gone <strong>FOREVER</strong>!</h5>
-                <div class="col text-center">
-                  <button
-                  type="submit" class="btn btn-secondary">
+      <div class="col d-flex justify-content-center align-items-center" style="min-height: 65vh;">
+        <div class="card text-center">
+          <h5 class="card-header">Are you sure you want to delete this chapter?</h5>
+          <div class="card-body">
+            <form method="post">
+              {% csrf_token %}
+              <h5 class="card-title">It will be gone <strong>FOREVER</strong>!</h5>
+              <div class="col text-center">
+                <button type="submit" class="btn btn-secondary">
                   Delete chapter
                 </button>
-                </div>
-              </form>
-            </div>
+              </div>
+            </form>
           </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
 
-<!-- Delete chapter page ends here -->
+  <!-- Delete chapter page ends here -->
 
 
-{% endblock content %}
+  {% endblock content %}
