--- a/browse/templates/browse/browse.html
+++ b/browse/templates/browse/browse.html
@@ -59,10 +59,9 @@
           <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Prev">&laquo;</a>
           {% endif %}
         </li>
-        <li class="current">
+        <li class="current"></li>
         <li class="page-item"></li>
         <li class="page-item"><a class="page-link" href="#">Page {{ page_obj.number }}</a></li>
-        </li>
         <li class="page-item">
           {% if page_obj.has_next %}
           <a href="?page={{ page_obj.next_page_number }}" class="page-link" aria-label="Next">&raquo;</a>
