--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Google Fonts CSS -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href='https://fonts.googleapis.com/css?family=Montserrat:wght@300;700&display=swap' rel='stylesheet'>
 
   <!-- Bootstrap Install CSS -->
@@ -17,7 +17,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
@@ -26,9 +26,8 @@
     <nav class="navbar navbar-expand-lg" style="background-color: #f1e7c1ea;">
       <div class="container-fluid">
         <a class="navbar-brand" href="{{ home_url }}">Inkpad</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-          aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -43,7 +42,8 @@
           <ul class="navbar-nav ms-auto">
             {% if user.is_authenticated %}
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 {{ user }}
               </a>
               <ul class="dropdown-menu">
@@ -70,68 +70,72 @@
     </nav>
     <!-- Navigation bar end -->
 
-      
 
 
 
-      <main class="content-wrapper">
-        {% block content %}
-        <!-- Content Goes here -->
-        {% endblock content %}
-      </main>
+
+    <main class="content-wrapper">
+      {% block content %}
+      <!-- Content Goes here -->
+      {% endblock content %}
+    </main>
 
 
-      <!-- Footer start -->
-      <footer class="text-center" style="background-color: #f1e7c1ea;">
-        <!-- Grid container -->
-        <div class="container pt-4">
-          <!-- Section: Social media -->
-          <section class="mb-4">
-            <!-- Facebook -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.facebook.com/" role="button"
-              data-mdb-ripple-color="dark" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <!-- Footer start -->
+    <footer class="text-center" style="background-color: #f1e7c1ea;">
+      <!-- Grid container -->
+      <div class="container pt-4">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+          <!-- Facebook -->
+          <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1"
+            href="https://www.facebook.com/" role="button" data-mdb-ripple-color="dark" target="_blank"><i
+              class="fab fa-facebook-f"></i></a>
 
-            <!-- Twitter -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.twitter.com/" role="button"
-              data-mdb-ripple-color="dark" target="_blank"><i class="fab fa-twitter"></i></a>
+          <!-- Twitter -->
+          <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.twitter.com/"
+            role="button" data-mdb-ripple-color="dark" target="_blank"><i class="fab fa-twitter"></i></a>
 
-            <!-- TikTok -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.tiktok.com/" role="button"
-              data-mdb-ripple-color="dark" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+          <!-- TikTok -->
+          <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.tiktok.com/"
+            role="button" data-mdb-ripple-color="dark" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
 
-            <!-- Instagram -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.Instagram.com/" role="button"
-              data-mdb-ripple-color="dark" target="_blank"><i class="fab fa-instagram"></i></a>
+          <!-- Instagram -->
+          <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1"
+            href="https://www.Instagram.com/" role="button" data-mdb-ripple-color="dark" target="_blank"><i
+              class="fab fa-instagram"></i></a>
 
-            <!-- Pinterest -->
-            <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1" href="https://www.pinterest.com/" role="button"
-              data-mdb-ripple-color="dark" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
-          </section>
-          <!-- Section: Social media -->
-        </div>
-        <!-- Grid container -->
+          <!-- Pinterest -->
+          <a data-mdb-ripple-init class="btn btn-link btn-floating btn-lg text-body m-1"
+            href="https://www.pinterest.com/" role="button" data-mdb-ripple-color="dark" target="_blank"><i
+              class="fa-brands fa-pinterest"></i></a>
+        </section>
+        <!-- Section: Social media -->
+      </div>
+      <!-- Grid container -->
 
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-          © 2024 Copyright:
-          <a class="text-body" href="#">Danille Hamilton</a>
-        </div>
-        <!-- Copyright -->
-      </footer>
-      <!-- Footer end -->
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+        © 2024 Copyright:
+        <a class="text-body" href="#">Danille Hamilton</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!-- Footer end -->
 
-      <!-- Javascript Bootstrap -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-  
-      <!-- Jquery  -->
-      <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <!-- Javascript Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
 
-      <!-- Font Awesome CSS -->
-      <script src="https://kit.fontawesome.com/d5e5e3db0c.js" crossorigin="anonymous"></script>
-      {% block extras %} {% endblock %}
-    </div>
+    <!-- Jquery  -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <!-- Font Awesome CSS -->
+    <script src="https://kit.fontawesome.com/d5e5e3db0c.js" crossorigin="anonymous"></script>
+    {% block extras %} {% endblock %}
+  </div>
 </body>
 
 </html>
