Add float none for check box log in

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -164,6 +164,12 @@ footer {
     position: relative;
 }
 
+/* Login page */
+.form-check .form-check-input {
+    float: none;
+}
+
+
 
 /* ---------- -------- Media queries  */
 
