--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -24,7 +24,7 @@
               <a href="{% url 'browse' %}" class="btn btn-light">Browse books</a>
               <a href="{% url 'book_details' %}" class="btn btn-light">Create a book</a>
             {% else %}
-              <a href="{% url 'account_signup' %}" class="btn btn-light">Log in </a>
+              <a href="{% url 'account_signup' %}" class="btn btn-light">Sign up </a>
             {% endif %}
       </div>
     </div>
